# perseus-vault

./: CHANGELOG.md  CLAIMS-AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PERF.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  awesome-mimir.md  build.rs  funding.json  glama.json  index.html  manifest.json  server.json  smithery.yaml
.github/workflows/: audit.yml  codeql.yml  concurrency-gate.yml  deprecate-legacy-mimir.yml  integrations.yml  mcp-registry.yml  noisegate-golden.yml  perf-gate.yml  recall-gate.yml  release.yml  scale-gate.yml  smoke-test.yml  temporal-gate.yml  test.yml
.well-known/: funding-manifest-urls
.well-known/mcp/: server-card.json
benchmark/: GAUNTLET.md
benchmark/beam/: README.md  gate.py  run.py
benchmark/contention/: README.md  burn_bench.py  live_bench.py  vault_client.py
benchmark/embedding-quantization/: MATRIX.md  NVFP4.md  README.md  aggregate.py  fp32_vs_int8_results.json  gate.py  measure_fp32.py  report.json
benchmark/lambda/: README.md  campaign_run.sh  competitors_bench.py  parallel_embed_fleet.py  run_scale100k_durable.sh  run_scale1m_durable.sh  scale_bench.py  scale_bench_1m.py  serve_fleet.sh
benchmark/lambda/results/: competitors.html  competitors.json  fleet100k_recall.json  fleet_8gpu_v100_throughput.json  scale1m_2c_off.json  scale1m_2c_on.json  scale1m_pure1bit.json  scale1m_qwen3_0.6b.json  scale1m_sig619_off.json  scale1m_sig619_on.json  scale1m_sig619_v15_off.json  scale1m_sig619_v15_on.json  scale_1m_distinct.json
benchmark/longmemeval/: COMPARISON.md  CPST.md  EXPANSION_588.md  KU_SHARED_590.md  README.md  SUPERSEDE_590.md  cpst.json  expansion_588_off_report.json  expansion_588_on_report.json  expansion_date_diag.py  hypotheses-cot-mimir-gpt-4o-2024-08-06.jsonl  hypotheses-mimir-gpt-4o-2024-08-06.jsonl  official-eval-results-cot-gpt-4o.jsonl  official-eval-results-gpt-4o.jsonl  qa.py  qa_report_cot.json  qa_report_cot_seed2.json  qa_report_cot_seed3.json  qa_report_cpst100.json  report.json  run.py  supersede_590_on_report.json
benchmark/recall/: gate.py
benchmark/scale/: README.md  gate.py  report.json  run.py
benchmark/temporal/: README.md  dataset.json  gate.py  gauntlet.py  gauntlet_dataset.json  gauntlet_report.json  report.json  run.py
benchmarks/: LONG_MEM_EVAL.md
clawhub/skills/mimir/: SKILL.md
docs/: ENCRYPTION.md  EXPORT-CONTROL.md  ROADMAP.md  SBOM.md  SECURITY-INDEX.md  SECURITY-MILESTONES.md  THREAT-MODEL.md  audit-chain-crypto-review-SOW.md  audit-chain-keyed-mac-design.md  capture.md  deployment-amd-mi300x.md  federal-buyers.md  lifecycle-hooks.md  retention.md  retrieval-modes.md  security-review-2026-07-05.md  vuln-response.md
docs/clients/: README.md
docs/comparison/: mimir-vs-letta.md  mimir-vs-mem0.md  mimir-vs-zep.md
docs/integration/: claude-code.md  context-budget-stack.md  cursor.md  general-mcp.md
docs/specs/: external-source-sync-contract.md  graph-first-retrieval.md  hybrid-retrieval-ranking.md  incremental-extraction-refresh.md  keystones.md  memory-operations-taxonomy.md  memory-provenance-and-external-refs.md  memory-taxonomy-and-precedence.md  multi-agent-scoping.md  provenance-classes-derived-facts.md  served-memory-api.md  source-anchors-corrections-retention.md  structured-truth-retrieval-policy.md  temporal-rag.md  typed-ontology.md
examples/: README.md  quickstart.py
integrations/: README.md
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/perseus_vault_autogen/: __init__.py
integrations/autogen/tests/: test_perseus_vault_memory.py
integrations/chancery/: writ-config.md
integrations/client/: README.md  pyproject.toml
integrations/client/perseus_vault_client/: __init__.py
integrations/client/tests/: test_vault_client.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/perseus_vault_crewai/: __init__.py
integrations/crewai/tests/: test_perseus_vault_tool.py
integrations/langgraph/: README.md  pyproject.toml
integrations/langgraph/perseus_vault_langgraph/: __init__.py
integrations/langgraph/tests/: test_perseus_vault_store.py
integrations/noisegate/: fixtures.md  hermes-config.md  prepare_output.golden.json  regen.sh
integrations/perseus-vault-persist/: README.md  pyproject.toml
integrations/perseus-vault-persist/perseus_vault_persist/: __init__.py  store.py
integrations/perseus-vault-persist/tests/: test_event_store.py
integrations/pydantic-ai/: README.md  pyproject.toml
integrations/pydantic-ai/perseus_vault_pydantic_ai/: __init__.py
integrations/pydantic-ai/tests/: test_pydantic_ai_integration.py
plugins/obsidian-mimir/: manifest.json
scripts/: bootstrap.sh  gen_benchmark_page.py  install.sh  timeline_replay.py
src/: capture.rs  communities.rs  db.rs  embedding.rs  encryption.rs  grpc.rs  main.rs  mcp.rs  models.rs  schema.rs  tools.rs  transport.rs
src/connectors/: github.rs
src/web/: dashboard.html  mod.rs
tests/fixtures/: trace_example.json
