[package]
name = "mimir"
version = "0.2.0"
edition = "2021"
description = "Persistent memory engine for AI agents — MCP JSON-RPC stdio server"
repository = "https://github.com/tcconnally/mimir"
license = "MIT"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
