[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perseus-vault-crewai"
version = "0.1.0"
description = "Perseus Vault persistent memory tool for CrewAI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Perseus Computing LLC" }]
keywords = ["crewai", "perseus-vault", "memory", "mcp", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "crewai>=0.30.0",
    "perseus-vault-client>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Perseus-Computing-LLC/perseus-vault"
Repository = "https://github.com/Perseus-Computing-LLC/perseus-vault"

[tool.setuptools]
packages = ["perseus_vault_crewai"]
package-dir = { "" = "." }
